--- a/scaleway/testdata/lblb-with-ip.cassette.yaml
+++ b/scaleway/testdata/lblb-with-ip.cassette.yaml
@@ -239,11 +239,9 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: '{"dhcp_config":{}}'
+    body: ""
     form: {}
     headers:
-      Content-Type:
-      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
@@ -274,9 +272,11 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"dhcp_config":{}}'
     form: {}
     headers:
+      Content-Type:
+      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
@@ -769,19 +769,19 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: '{}'
+    body: ""
     form: {}
     headers:
-      Content-Type:
-      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/lb/v1/zones/fr-par-1/lbs/e8a00c7a-6a87-4b02-9e18-1f71a2e5c057/private-networks/2a542081-2cc0-4b62-93f5-1d5950d86c3d/detach
     method: POST
   response:
-    body: ""
+    body: '{"id":"99f77457-8d7f-4c17-bfc4-d0609613a71d","name":"test-lb-with-dhcp","description":"","status":"ready","instances":[{"id":"9a861e5e-686f-418f-8186-627faab25085","status":"ready","ip_address":"10.74.86.45","created_at":"2021-11-10T10:27:46.050274Z","updated_at":"2021-11-10T10:29:59.204080Z","region":"fr-par","zone":"fr-par-1"},{"id":"8d1b87b4-04a5-4619-be4f-22d2b021b7a7","status":"ready","ip_address":"10.71.70.7","created_at":"2021-11-10T10:28:03.348529Z","updated_at":"2021-11-10T10:29:59.532620Z","region":"fr-par","zone":"fr-par-1"}],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","ip":[{"id":"7c1c75f6-5919-4d95-9e19-4e84e6f0b049","ip_address":"51.159.26.228","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":"99f77457-8d7f-4c17-bfc4-d0609613a71d","reverse":"51-159-26-228.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}],"tags":[],"frontend_count":0,"backend_count":0,"type":"lb-s","subscriber":null,"ssl_compatibility_level":"ssl_compatibility_level_intermediate","created_at":"2021-11-10T10:29:55.711593Z","updated_at":"2021-11-10T10:29:59.874406Z","private_network_count":1,"route_count":0,"region":"fr-par","zone":"fr-par-1"}'
     headers:
+      Content-Length:
+      - "1280"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -802,9 +802,11 @@ interactions:
     code: 204
     duration: ""
 - request:
-    body: ""
+    body: '{}'
     form: {}
     headers:
+      Content-Type:
+      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
@@ -1181,7 +1183,7 @@ interactions:
     body: '{"id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","name":"test-lb-with-static","description":"","status":"ready","instances":[{"id":"7adfd3a2-5b77-4d37-aa39-9fc8691cfd92","status":"ready","ip_address":"10.64.194.21","created_at":"2021-11-09T16:59:03.638969Z","updated_at":"2021-11-09T17:02:19.798069Z","region":"fr-par","zone":"fr-par-1"},{"id":"eef3dd9e-3fc5-4e45-94e4-70535dc150ba","status":"ready","ip_address":"10.65.26.137","created_at":"2021-11-09T16:47:23.363936Z","updated_at":"2021-11-09T17:02:20.152054Z","region":"fr-par","zone":"fr-par-1"}],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","ip":[{"id":"d1f7a30a-8e49-4fa6-9b8e-5f7a1fa58fd4","ip_address":"195.154.69.81","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","reverse":"195-154-69-81.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}],"tags":[],"frontend_count":0,"backend_count":0,"type":"lb-s","subscriber":null,"ssl_compatibility_level":"ssl_compatibility_level_intermediate","created_at":"2021-11-09T17:02:19.328424Z","updated_at":"2021-11-09T17:02:20.491466Z","private_network_count":1,"route_count":0,"region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "1285"
+      - "1133"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1346,7 +1348,7 @@ interactions:
     body: '{"id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","name":"test-lb-with-static","description":"","status":"ready","instances":[{"id":"7adfd3a2-5b77-4d37-aa39-9fc8691cfd92","status":"ready","ip_address":"10.64.194.21","created_at":"2021-11-09T16:59:03.638969Z","updated_at":"2021-11-09T17:02:19.798069Z","region":"fr-par","zone":"fr-par-1"},{"id":"eef3dd9e-3fc5-4e45-94e4-70535dc150ba","status":"ready","ip_address":"10.65.26.137","created_at":"2021-11-09T16:47:23.363936Z","updated_at":"2021-11-09T17:02:20.152054Z","region":"fr-par","zone":"fr-par-1"}],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","ip":[{"id":"d1f7a30a-8e49-4fa6-9b8e-5f7a1fa58fd4","ip_address":"195.154.69.81","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","reverse":"195-154-69-81.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}],"tags":[],"frontend_count":0,"backend_count":0,"type":"lb-s","subscriber":null,"ssl_compatibility_level":"ssl_compatibility_level_intermediate","created_at":"2021-11-09T17:02:19.328424Z","updated_at":"2021-11-09T17:02:20.491466Z","private_network_count":1,"route_count":0,"region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "1285"
+      - "1133"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1478,7 +1480,7 @@ interactions:
     body: '{"id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","name":"test-lb-with-static","description":"","status":"ready","instances":[{"id":"7adfd3a2-5b77-4d37-aa39-9fc8691cfd92","status":"ready","ip_address":"10.64.194.21","created_at":"2021-11-09T16:59:03.638969Z","updated_at":"2021-11-09T17:02:19.798069Z","region":"fr-par","zone":"fr-par-1"},{"id":"eef3dd9e-3fc5-4e45-94e4-70535dc150ba","status":"ready","ip_address":"10.65.26.137","created_at":"2021-11-09T16:47:23.363936Z","updated_at":"2021-11-09T17:02:20.152054Z","region":"fr-par","zone":"fr-par-1"}],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","ip":[{"id":"d1f7a30a-8e49-4fa6-9b8e-5f7a1fa58fd4","ip_address":"195.154.69.81","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","reverse":"195-154-69-81.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}],"tags":[],"frontend_count":0,"backend_count":0,"type":"lb-s","subscriber":null,"ssl_compatibility_level":"ssl_compatibility_level_intermediate","created_at":"2021-11-09T17:02:19.328424Z","updated_at":"2021-11-09T17:02:20.491466Z","private_network_count":1,"route_count":0,"region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "1285"
+      - "1133"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1532,9 +1534,11 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"name":"pn-with-lb-to-add","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","tags":[]}'
     form: {}
     headers:
+      Content-Type:
+      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
@@ -1544,7 +1548,7 @@ interactions:
     body: '{"id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","name":"test-lb-with-static","description":"","status":"ready","instances":[{"id":"7adfd3a2-5b77-4d37-aa39-9fc8691cfd92","status":"ready","ip_address":"10.64.194.21","created_at":"2021-11-09T16:59:03.638969Z","updated_at":"2021-11-09T17:02:19.798069Z","region":"fr-par","zone":"fr-par-1"},{"id":"eef3dd9e-3fc5-4e45-94e4-70535dc150ba","status":"ready","ip_address":"10.65.26.137","created_at":"2021-11-09T16:47:23.363936Z","updated_at":"2021-11-09T17:02:20.152054Z","region":"fr-par","zone":"fr-par-1"}],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","ip":[{"id":"d1f7a30a-8e49-4fa6-9b8e-5f7a1fa58fd4","ip_address":"195.154.69.81","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":"b5a61360-8846-4763-b5aa-73c7a7d97f15","reverse":"195-154-69-81.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}],"tags":[],"frontend_count":0,"backend_count":0,"type":"lb-s","subscriber":null,"ssl_compatibility_level":"ssl_compatibility_level_intermediate","created_at":"2021-11-09T17:02:19.328424Z","updated_at":"2021-11-09T17:02:20.491466Z","private_network_count":1,"route_count":0,"region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "1285"
+      - "295"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1666,19 +1670,19 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: '{}'
+    body: ""
     form: {}
     headers:
-      Content-Type:
-      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/lb/v1/zones/fr-par-1/lbs/b5a61360-8846-4763-b5aa-73c7a7d97f15/private-networks/2a542081-2cc0-4b62-93f5-1d5950d86c3d/detach
     method: POST
   response:
-    body: ""
+    body: '{"private_network":[{"lb":{"id":"96330fde-0f0b-488d-891c-8a14faa97118","name":"test-lb-with-static","description":"","status":"ready","instances":[],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","ip":[{"id":"7c1c75f6-5919-4d95-9e19-4e84e6f0b049","ip_address":"51.159.26.228","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":"96330fde-0f0b-488d-891c-8a14faa97118","reverse":"51-159-26-228.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}],"tags":[],"frontend_count":0,"backend_count":0,"type":"lb-s","subscriber":null,"ssl_compatibility_level":"ssl_compatibility_level_intermediate","created_at":"2021-11-10T10:31:39.684354Z","updated_at":"2021-11-10T10:31:41.252120Z","private_network_count":1,"route_count":0,"region":"fr-par","zone":"fr-par-1"},"private_network_id":"122cd6d0-b65e-46b8-b5de-531caf08f360","status":"ready","created_at":"2021-11-10T10:32:10.630026Z","updated_at":"2021-11-10T10:32:13.618101Z","static_config":{"ip_address":["172.16.0.100","172.16.0.101"]}}],"total_count":1}'
     headers:
+      Content-Length:
+      - "1131"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1730,6 +1734,39 @@ interactions:
       - ad6de286-2203-4c78-a018-2cb2c5131401
     status: 200 OK
     code: 200
+    duration: ""
+- request:
+    body: '{}'
+    form: {}
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/lbs/96330fde-0f0b-488d-891c-8a14faa97118/private-networks/122cd6d0-b65e-46b8-b5de-531caf08f360/detach
+    method: POST
+  response:
+    body: ""
+    headers:
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 10 Nov 2021 10:32:14 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 2e11c93d-47a8-4127-8b43-205abab4a16f
+    status: 204 No Content
+    code: 204
     duration: ""
 - request:
     body: ""
