--- a/scaleway/testdata/instance-volume-cannot-resize-block-down.cassette.yaml
+++ b/scaleway/testdata/instance-volume-cannot-resize-block-down.cassette.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-infallible-dirac","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"b_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-competent-cohen","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"b_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
@@ -13,22 +13,22 @@ interactions:
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "4a789bac-11c4-4289-9acd-3ecafd6dd817", "name": "tf-vol-competent-cohen",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T17:00:00.741494+00:00", "modification_date":
+      "2021-12-20T17:00:00.741494+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "432"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:21 GMT
+      - Mon, 20 Dec 2021 17:00:01 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - baa56785-c0eb-4ade-acc3-020ec9d83696
+      - 24dcc70c-1edf-46ba-80ad-f69567228e72
     status: 201 Created
     code: 201
     duration: ""
@@ -49,23 +49,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "4a789bac-11c4-4289-9acd-3ecafd6dd817", "name": "tf-vol-competent-cohen",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T17:00:00.741494+00:00", "modification_date":
+      "2021-12-20T17:00:00.741494+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "432"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:21 GMT
+      - Mon, 20 Dec 2021 17:00:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4a87649f-c02c-4b97-b2a3-cf8b0bd7987e
+      - cc9627e1-25c8-4c6a-bca6-c75ef3a8045c
     status: 200 OK
     code: 200
     duration: ""
@@ -86,23 +86,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "4a789bac-11c4-4289-9acd-3ecafd6dd817", "name": "tf-vol-competent-cohen",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T17:00:00.741494+00:00", "modification_date":
+      "2021-12-20T17:00:00.741494+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "432"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:22 GMT
+      - Mon, 20 Dec 2021 17:00:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a92f8c69-5e89-4983-9b96-c05ad4191e89
+      - 43250d8c-af08-4abb-8b80-7b813448db1b
     status: 200 OK
     code: 200
     duration: ""
@@ -123,23 +123,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "4a789bac-11c4-4289-9acd-3ecafd6dd817", "name": "tf-vol-competent-cohen",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T17:00:00.741494+00:00", "modification_date":
+      "2021-12-20T17:00:00.741494+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "432"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:22 GMT
+      - Mon, 20 Dec 2021 17:00:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3a2bdcec-1c86-469b-bce9-98474c41c75f
+      - 71efd547-8fc6-414e-a4bb-55347ebde40f
     status: 200 OK
     code: 200
     duration: ""
@@ -160,23 +160,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "4a789bac-11c4-4289-9acd-3ecafd6dd817", "name": "tf-vol-competent-cohen",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T17:00:00.741494+00:00", "modification_date":
+      "2021-12-20T17:00:00.741494+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "432"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:23 GMT
+      - Mon, 20 Dec 2021 17:00:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 35b546f4-3695-4ae5-821a-54f02c230f73
+      - ab6c72bc-f5d6-4fd1-8fe8-dfe8d3294910
     status: 200 OK
     code: 200
     duration: ""
@@ -197,7 +197,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
     method: DELETE
   response:
     body: ""
@@ -205,7 +205,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:23 GMT
+      - Mon, 20 Dec 2021 17:00:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -215,7 +215,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - abb28bfc-37c3-407e-baa3-3104ab7ba512
+      - dca19aaa-5a25-4780-af9b-89ac271a405a
     status: 204 No Content
     code: 204
     duration: ""
@@ -226,10 +226,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/4a789bac-11c4-4289-9acd-3ecafd6dd817
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''92d7432b-afb0-4a2d-9584-5a917a61c6a7''
+    body: '{"type": "unknown_resource", "message": "Volume ''4a789bac-11c4-4289-9acd-3ecafd6dd817''
       not found."}'
     headers:
       Content-Length:
@@ -239,7 +239,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:23 GMT
+      - Mon, 20 Dec 2021 17:00:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -249,7 +249,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b34e4331-789b-4183-832d-635c3a4824e8
+      - f3a5c025-e183-40d7-8ff9-a9ac1a9b45e9
     status: 404 Not Found
     code: 404
     duration: ""
