--- a/scaleway/testdata/instance-volume-different-name-generated.cassette.yaml
+++ b/scaleway/testdata/instance-volume-different-name-generated.cassette.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-nice-keller","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-confident-ramanujan","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
@@ -13,22 +13,22 @@ interactions:
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "907e182b-da35-4cf0-9625-9652efe03fdb", "name": "tf-vol-confident-ramanujan",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T16:59:46.077331+00:00", "modification_date":
+      "2021-12-20T16:59:46.077331+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "436"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:03 GMT
+      - Mon, 20 Dec 2021 16:59:46 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9f7ae172-bcc1-4dbe-889b-08b9644ed1ed
+      - ded23c6a-e98e-4981-b777-b872805cd506
     status: 201 Created
     code: 201
     duration: ""
@@ -49,23 +49,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "907e182b-da35-4cf0-9625-9652efe03fdb", "name": "tf-vol-confident-ramanujan",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T16:59:46.077331+00:00", "modification_date":
+      "2021-12-20T16:59:46.077331+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "436"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:03 GMT
+      - Mon, 20 Dec 2021 16:59:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - da8918c9-ca2f-4b78-b97c-3d54e4cfad3b
+      - cfd736c9-ab9e-4430-b5f3-f1f4ea704806
     status: 200 OK
     code: 200
     duration: ""
@@ -86,23 +86,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "907e182b-da35-4cf0-9625-9652efe03fdb", "name": "tf-vol-confident-ramanujan",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T16:59:46.077331+00:00", "modification_date":
+      "2021-12-20T16:59:46.077331+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "436"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:04 GMT
+      - Mon, 20 Dec 2021 16:59:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 025c1129-b5de-4f85-bef6-97e1ff48bb4a
+      - 06e8002b-39f1-4eef-b5b7-776f8e69e030
     status: 200 OK
     code: 200
     duration: ""
@@ -123,23 +123,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "907e182b-da35-4cf0-9625-9652efe03fdb", "name": "tf-vol-confident-ramanujan",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T16:59:46.077331+00:00", "modification_date":
+      "2021-12-20T16:59:46.077331+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "436"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:04 GMT
+      - Mon, 20 Dec 2021 16:59:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f5dc8365-0217-4a17-9ee1-7aa9bd0642d5
+      - 9fcc5dd6-27e6-4856-ac93-d92008e62776
     status: 200 OK
     code: 200
     duration: ""
@@ -160,23 +160,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "907e182b-da35-4cf0-9625-9652efe03fdb", "name": "tf-vol-confident-ramanujan",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T16:59:46.077331+00:00", "modification_date":
+      "2021-12-20T16:59:46.077331+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "436"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:05 GMT
+      - Mon, 20 Dec 2021 16:59:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 801e96e1-0614-4880-8dde-cd8ffc92bd81
+      - 7ce3e42d-adf7-4531-a429-cfd6233f5ad9
     status: 200 OK
     code: 200
     duration: ""
@@ -197,23 +197,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "907e182b-da35-4cf0-9625-9652efe03fdb", "name": "tf-vol-confident-ramanujan",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-20T16:59:46.077331+00:00", "modification_date":
+      "2021-12-20T16:59:46.077331+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "436"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:06 GMT
+      - Mon, 20 Dec 2021 16:59:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -223,7 +223,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b78137ad-d08e-499d-83cc-087bbe3daacb
+      - 1d8a0a26-36cf-45b2-b42d-f1b8ee84f78c
     status: 200 OK
     code: 200
     duration: ""
@@ -234,7 +234,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: DELETE
   response:
     body: ""
@@ -242,7 +242,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:06 GMT
+      - Mon, 20 Dec 2021 16:59:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -252,7 +252,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - eb42f870-ab7e-4903-98a9-6859c79edb3d
+      - d79dc449-83a8-480f-bee9-fcbb49072ea5
     status: 204 No Content
     code: 204
     duration: ""
@@ -263,10 +263,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/907e182b-da35-4cf0-9625-9652efe03fdb
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''6c20d2c8-b8c4-4505-9b86-546ec324ed4c''
+    body: '{"type": "unknown_resource", "message": "Volume ''907e182b-da35-4cf0-9625-9652efe03fdb''
       not found."}'
     headers:
       Content-Length:
@@ -276,7 +276,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:06 GMT
+      - Mon, 20 Dec 2021 16:59:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -286,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1fd7ff3b-4e9c-421a-a0cb-be19913a817a
+      - 67181400-7ed0-4b8e-8dab-e50dae290585
     status: 404 Not Found
     code: 404
     duration: ""
